[package]
name = "fabriconth"
version = "0.1.1"
edition = "2018"
authors = ["Tony Chen <tonychen8472@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
specs = { version = "0.17.0", features = ["specs-derive"] }